--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://containers-us-west-185.railway.app:7226/railway
+spring.datasource.url=postgres://root:JW4yNf9ly5dv9jgDSnTnjREhpfKC7sc6@dpg-cii2l5lph6erq6lq4qf0-a/agricultural_price
 spring.datasource.username=root
-spring.datasource.password=tjndki95ElAK6tiel3DJ
+spring.datasource.password=JW4yNf9ly5dv9jgDSnTnjREhpfKC7sc6
 #spring.datasource.url = jdbc:mysql://localhost:3306/agricultural_price
 #spring.datasource.username = root
 #spring.datasource.password = HuyTNG@MYSQL2022
